--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.12.0",
     "@tailwindcss/forms": "^0.5.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.29.0",
     "remote": "^0.2.6"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
     "postcss": "^8.4.12",
+    "prisma": "^3.12.0",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.3"
   }
