--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://127.0.0.1:3306/carrot-market"
+TWILIO_SID=AC12a70b1dbc76674f72cdf6017803a508
+TWILIO_TOKEN=f606a8121844fc1691a8749f3ee9e5c9
+TWILIO_MSID=MGb51f055d18e1835754cacdddfffc5f1c
+MY_PHONE=+821048209687
