--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@prisma/client": "^3.12.0",
     "@tailwindcss/forms": "^0.5.0",
+    "@types/nodemailer": "^6.4.4",
+    "iron-session": "^6.1.2",
     "next": "12.1.4",
+    "nodemailer": "^6.7.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.29.0",
-    "remote": "^0.2.6"
+    "remote": "^0.2.6",
+    "twilio": "^3.76.1"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
