--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ TWILIO_SID=AC12a70b1dbc76674f72cdf6017803a508
 TWILIO_TOKEN=f606a8121844fc1691a8749f3ee9e5c9
 TWILIO_MSID=MGb51f055d18e1835754cacdddfffc5f1c
 MY_PHONE=+821048209687
+COOKIE_PASSWORD=SwNuM9bn3M7w,EeMrf!$/G\)EM/)B!9'?DEM5XxN
