--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.0.0",
     "react-hook-form": "^7.29.0",
     "remote": "^0.2.6",
+    "swr": "^1.3.0",
     "twilio": "^3.76.1"
   },
   "devDependencies": {
