--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ TWILIO_TOKEN=f606a8121844fc1691a8749f3ee9e5c9
 TWILIO_MSID=MGb51f055d18e1835754cacdddfffc5f1c
 MY_PHONE=+821048209687
 COOKIE_PASSWORD=SwNuM9bn3M7w,EeMrf!$/G\)EM/)B!9'?DEM5XxN
+
+IMAGE_TOKEN=tc_2YrJ5tCsLOLGHSq1h_yIl4U67xiIbeRtG3u3s
+ACCOUNT_ID=f77cee8c247c495eb56f21bd69f14e97
