--- a/package.json
+++ b/package.json
@@ -1,37 +1,41 @@
 {
-  "name": "carrot-market",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^3.12.0",
-    "@tailwindcss/forms": "^0.5.0",
-    "@types/nodemailer": "^6.4.4",
-    "iron-session": "^6.1.2",
-    "next": "12.1.4",
-    "nodemailer": "^6.7.3",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-hook-form": "^7.29.0",
-    "remote": "^0.2.6",
-    "swr": "^1.3.0",
-    "twilio": "^3.76.1"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/react": "^18.0.1",
-    "@types/react-dom": "18.0.0",
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.4",
-    "postcss": "^8.4.12",
-    "prisma": "^3.12.0",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.6.3"
-  }
+	"name": "carrot-market",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@prisma/client": "^3.12.0",
+		"@tailwindcss/forms": "^0.5.0",
+		"@types/nodemailer": "^6.4.4",
+		"iron-session": "^6.1.2",
+		"next": "12.1.4",
+		"nodemailer": "^6.7.3",
+		"react": "18.0.0",
+		"react-dom": "18.0.0",
+		"react-hook-form": "^7.29.0",
+		"remote": "^0.2.6",
+		"swr": "^1.3.0",
+		"ts-node": "^10.7.0",
+		"twilio": "^3.76.1"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.23",
+		"@types/react": "^18.0.1",
+		"@types/react-dom": "18.0.0",
+		"autoprefixer": "^10.4.4",
+		"eslint": "8.13.0",
+		"eslint-config-next": "12.1.4",
+		"postcss": "^8.4.12",
+		"prisma": "^3.12.0",
+		"tailwindcss": "^3.0.23",
+		"typescript": "4.6.3"
+	},
+	"prisma": {
+		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+	}
 }
