--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
 		"@prisma/client": "^3.12.0",
 		"@tailwindcss/forms": "^0.5.0",
 		"@types/nodemailer": "^6.4.4",
+		"gray-matter": "^4.0.3",
 		"iron-session": "^6.1.2",
-		"next": "12.1.4",
+		"next": "^12.1.5-canary.0",
 		"nodemailer": "^6.7.3",
-		"react": "18.0.0",
-		"react-dom": "18.0.0",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
 		"react-hook-form": "^7.29.0",
+		"remark-html": "^15.0.1",
+		"remark-parse": "^10.0.1",
 		"remote": "^0.2.6",
 		"swr": "^1.3.0",
 		"ts-node": "^10.7.0",
-		"twilio": "^3.76.1"
+		"twilio": "^3.76.1",
+		"unified": "^10.1.2"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.23",
